CatClicker/styles.css
:root {
  --menu-text-color: #fff;
}

body {
  font-family: sans-serif;

  /* remove default margins */
  margin: 0;
}

nav {
  /* allow custom positioning of child elements */
  position: relative;

  background-color: #1a77fe;
  color: var(--menu-text-color);
  display: flex;
  justify-content: center;
  align-items: center;
}

h1 {
  text-align: center;
}

.hamburger {
  /* fix hamburger to the left of the navbar */
  position: absolute;
  left: 0px;

  /* give it a right border to delineate it visually */
  border-right: 1px solid #fff;
}

.admin-btn {
  /* fix admin button to the right of the navbar */
  position: absolute;
  right: 0px;

  /* give it a left border to delineate it visually */
  border-left: 1px solid #fff;
}

.hamburger a,
.cats-menu a,
.admin-btn a {
  /* remove anchor tag's default styling */
  text-decoration: none;

  color: var(--menu-text-color);

  /*
   * make the a tag fill up its container
   * this increases the clickable area of the tag
   * see https://stackoverflow.com/a/11078553/7987987
   */
  display: block;
}

.hamburger a,
.admin-btn a {
  /*
   * create some space around the hamburger
   * this space is clickable because of `display: block` earlier
   */
  padding: 20px;
}

main {
  /* allow custom positioning of child elements */
  position: relative;
}

.cats-menu,
.admin-sidebar {
  /* position at the top of the body */
  position: absolute;
  top: 0;

  width: 200px;

  /* extend the menu to the bottom of the webpage */
  height: 100%;

  color: var(--menu-text-color);
  background-color: #66a4fe;
  padding: 0 0.5em;

  /* transition for showing/hiding the sidebar */
  transition: transform 0.3s;
}

.cats-menu {
  /* fix to the left edge */
  left: 0;
}

.sidebar-hidden {
  transform: translateX(-250px);
}

.cats-menu ul {
  list-style: none;
  padding: 0;
}

.cats-menu li {
  border-top: 1px dashed var(--menu-text-color);
}

.cats-menu li:last-child {
  /* the last list item needs a bottom border */
  border-bottom: 1px dashed var(--menu-text-color);
}

.cats-menu a {
  /*
   * create some space above and below the hamburger
   * this space is clickable because of `display: block` earlier
   */
  padding: 0.5em 0;
}

.cat-display {
  /*
   * prevent top margin of first child from moving this element down
   * see https://stackoverflow.com/a/1939980/7987987
   */
  overflow: auto;
}

section {
  text-align: center;
}

.cat-pic {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1em;
}

.cat-pic section {
  width: 70%;
}

@media screen and (min-width: 768px) {
  .cat-pic section {
    width: 50%;
  }
}

img {
  width: 100%;
  cursor: pointer;
  border-radius: 10px;
}

.admin-sidebar {
  /* fix to the right edge */
  right: 0;
}


.admin-hidden {
  transform: translateX(250px);
}

.admin-sidebar label {
  /* add vertical spacing between the form fields */
  display: block;
  margin: 0 0 0.5em 0;
}

.admin-sidebar input {
  /* fill up the available width while maintaining horizontal spacing */
  width: calc(100% - 0.25rem);
}

